# noctis

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  MEMORY.seed.md  README.md  ROADMAP.md  config.example.yaml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  research_proposal.yml
.github/workflows/: ci.yml
docs/: architecture.md  cli.md  configuration.md  data.md  development.md  parity.md  protective-exits-plan.md  research.md  safety.md  signal-surface-plan.md  validation.md
examples/: README.md  example_mandate.md  replay_scenarios.py  strategy_walkthrough.md
mandate/: MANDATE.md.example  README.md  tune-first.md
mandate/profiles/: aggressive.md  conservative.md  long-term.md  sector-specialist.md  short-term.md
mandate/references/: example-watchlist.md  high-vol-momentum-brief.md
scripts/: parity_harness.py
src/noctis/: __init__.py  __main__.py  bootstrap.py  cli.py  onboarding.py
src/noctis/backtest/: __init__.py  candidate.py  pipeline.py  pool.py  prefilter.py  scorecard.py  splits.py  validate.py
src/noctis/broker/: __init__.py  exits.py  live_stub.py  paper.py  persistence.py  seam.py  simulator.py
src/noctis/champions/: __init__.py  assignment.py  promotion.py  registry.py
src/noctis/config/: __init__.py  gate.py  settings.py
src/noctis/data/: __init__.py  aggregate.py  coverage.py  databento_provider.py  ingest.py  integrity.py  lake.py  market_calendar.py  preflight.py  seam.py  types.py  updater.py  vendor.py
src/noctis/engine/: __init__.py  clock.py  close.py  forward_ledger.py  machine.py  pacing.py  report_assembly.py  research.py  runtime.py  sessions.py  trading_day.py  trading_phase.py
src/noctis/live/: __init__.py  feed.py  node.py  risk.py
src/noctis/memory/: __init__.py  base.py  consolidate.py  store.py
src/noctis/observability/: __init__.py  console.py  events.py  tee.py
src/noctis/reporting/: __init__.py  report.py
src/noctis/research/: __init__.py  agent.py  author.py  briefings.py  contract_sheet.py  cost.py  digests.py  distill.py  driver.py  episode.py  exhaustion_registry.py  failed_store.py  ideation.py  journal.py  ledger.py  llm.py  mandate.py  misfire.py  parity.py  prompt.py  sweep.py  tools.py  (+2 more)
strategies/: README.md  TEMPLATE.py  donchian_breakout.py  rsi_meanrev.py  sma_crossover.py
tests/: _data_helpers.py  _session_helpers.py  _spec_helpers.py  conftest.py  test_account_continuity.py  test_agent_research.py  test_aggregate.py  test_backtest.py  test_bar_feed.py  test_bootstrap.py  test_briefings.py  test_broker.py  test_champions.py  test_cli.py  test_close.py  test_config.py  test_contract_sheet.py  test_cost.py  test_data_lake.py  test_debug_funnel.py  test_distill.py  test_engine.py  test_episode_runner.py  test_episodic_driver.py  test_event_tee.py  test_exhaustion_registry.py  test_exits.py  test_experiment_journal.py  test_failed_store.py  test_forward_ledger.py  test_htf_bars.py  test_ideation.py  test_init_migrate.py  test_library.py  test_live_feed.py  test_llm.py  test_mandate.py  test_memory.py  test_observability.py  test_onboarding.py  (+32 more)
tests/fixtures/: indicator_golden.json
(+26 files in other folders)
